z-index fixed on footoverlay css file

--- a/src/components/Footer/FooterOverlay.css
+++ b/src/components/Footer/FooterOverlay.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	height: 100%;
 	display: flex;
-	z-index: 100;
+	z-index: -1;
 	flex-direction: column;
 	position: absolute;
 }
